--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 requires = [
-    "poetry-core>=1.0.0",
-    "Cython>=0.29",
-    "numpy >=1.21.1",
+    "poetry-core",
+    "Cython",
+    "numpy",
 ]
 build-backend = "poetry.core.masonry.api"
 
@@ -24,9 +24,10 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
-numpy = ">=1.21.1"
-Cython = ">=0.29"
+python = "^3.11"
+cython = "^3.0.11"
+numpy = "^2.2.0"
+pandas = "^2.2.3"
 
 [tool.poetry.build]
 generate-setup-file = false
@@ -34,7 +35,7 @@ script = "build.py"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-pandas = ">=0.22,<2.0"
+pandas = "^2.2.3"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
